@@ -1,3 +1,8 @@
+2008-06-12  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar.c (PATH_LENGTH):
+	new macro, used instead of PATH_MAX, which may be too large
+
 2008-06-11  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c:
